# kcl-shutdown-timeout-demo

./: Dockerfile  README.md  amazon_kclpy_helper.py  compose.yaml  kcl.properties  main.py  pyproject.toml  run.sh
localstack/: dynamodb.json  init.sh
